<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".BookEditorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="Overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_name" />


            <EditText
                android:id="@+id/edit_suppliername"
                style="@style/EditorFieldStyle"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone_number"
                android:inputType="number" />

            <Button
                android:id="@+id/call"
                style="@style/EditorFieldStyle"
                android:background="@android:color/black"
                android:text="@string/tap_to_call"
                android:textColor="@color/colorPrimaryDark" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/Label_Price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/Price"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/Label_Quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/neg_btn"
                android:layout_width="@dimen/buttton_width"
                android:layout_height="@dimen/buttton_height"
                android:background="@drawable/ic_do_not_disturb_on_black_24dp" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="@dimen/quantity_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:gravity="center"
                android:hint="@string/quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/pos_btn"
                android:layout_width="@dimen/buttton_height"
                android:layout_height="@dimen/buttton_width"
                android:background="@drawable/ic_add_circle_black_24dp"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>